# ros_64

./: .gdbinit.tmpl  .gitignore  Cargo.toml  Makefile  README.md  build.rs  fix_gdb  grub.cfg  x86_64-ros.json
doc/: Project_desc.md
src/: console.rs  kernel.ld  lib.rs  main.rs
src/bootloader/: bootmain.c  elf64.h  entry.S  entryMP.S  entrypgdir.c  entrypgdir.h
src/bootloader/amd64/: target.json
src/kern/: console.rs  file.rs  gdt.rs  gdt64.rs  idt.rs  initcode.S  ioapic.rs  kalloc.rs  lapic.rs  mod.rs  mp.rs  proc.rs  spinlock.rs  uart.rs  vm.rs
